static/scss/answers/cards/professional-location.scss
$professional-location-spacing: var(--yxt-base-spacing) !default;
$professional-location-ordinal-dimensions: 18px !default;

:root {
  --hh-professional-location-spacing: #{$professional-location-spacing};
  --hh-professional-location-ordinal-dimensions: #{$professional-location-ordinal-dimensions};
}

.HitchhikerProfessionalLocation
{
  display: flex;
  font-size: var(--yxt-font-size-md);
  line-height: var(--yxt-line-height-md);
  background-color: var(--yxt-color-brand-white);
  padding: var(--hh-professional-location-spacing);

  &-body
  {
    width: 100%;
  }

  &-contentWrapper
  {
    display: flex;
    flex-direction: column;
    width: 100%;

    @media (min-width: $breakpoint-mobile-max)
    {
      justify-content: space-between;
      flex-direction: row;
      flex-wrap: nowrap;
    }
  }

  &-imgWrapper
  {
    display: flex;
    align-items: flex-start;
    width: 6.25rem;
    margin-right: 1rem;
  }

  &-img
  {
    width: 100%;
    height: auto;
  }

  &-ordinal {
    padding-top: 3px;
    border-radius: 50%;
    margin-top: calc(var(--hh-professional-location-spacing) / 4);
    margin-right: calc(var(--hh-professional-location-spacing) * 3/4);
    width: var(--hh-professional-location-ordinal-dimensions);
    height: var(--hh-professional-location-ordinal-dimensions);
    background-color: var(--yxt-color-brand-primary);
    border: solid black 1px;
    text-align: center;
    @include Text(
      $color: white,
      $size: var(--yxt-font-size-xs),
      $line-height: var(--yxt-line-height-xs),
      $weight: var(--yxt-font-weight-bold),
    );
  }

  &-topRow
  {
    display: flex;
  }

  &-title
  {
    font-size: var(--yxt-font-size-lg);
    line-height: var(--yxt-line-height-lg);
    font-weight: var(--yxt-font-weight-semibold);
  }

   &-titleLink
  {
    @include Link;
  }

  &-subtitle
  {
    color: var(--yxt-color-text-secondary);
    padding-bottom: 0;
  }

  &-distance
  {
    font-style: italic;
    margin-left: auto;
  }

  &-cardDetails
  {
    margin-top: calc(var(--hh-professional-location-spacing) / 2);
  }

  &-detailsText
  {
    @include rich_text_formatting;
  }

  &-listTitle
  {
    margin-top: calc(var(--hh-professional-location-spacing) / 2);
    font-weight: var(--yxt-font-weight-semibold);
  }

  &-list
  {
    list-style-type: disc;
    list-style-position: inside;
    padding-left: calc(var(--hh-professional-location-spacing) / 2);
  }

  &-phone
  {
    margin-top: calc(var(--hh-professional-location-spacing) / 2);
  }

  &-phone--desktop {
    display: none;

    @media (min-width: $breakpoint-mobile-max)
    {
      display: flex;
    }
  }

  &-phone--mobile {
    @include Link;
    display: flex;

    @media (min-width: $breakpoint-mobile-max)
    {
      display: none;
    }
  }

  &-ctasWrapper
  {
    text-transform: uppercase;
    margin-top: calc(var(--hh-professional-location-spacing) / 2);

    @media (min-width: $breakpoint-mobile-max)
    {
      margin-top: 0;
      margin-left: calc(var(--hh-professional-location-spacing) / 2);
      justify-content: center;
    }
  }

  &-primaryCTA,
  &-secondaryCTA
  {
    display: flex;
    margin-top: calc(var(--hh-professional-location-spacing) / 2);
  }

  .js-hidden
  {
    display: none;
  }
}

